project/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: hyderdevelops/posts:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts-port
      protocol: TCP
      port: 4001
      targetPort: 4001
---

apiVersion: v1
kind: Service
metadata:
  name: posts-node-port
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts-node-port
      protocol: TCP
      port: 4001
      targetPort: 4001
