project/infra/k8s/ingress-srv.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: posts-srv
            port:
              number: 4001
